Minor change in report

--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -75,6 +75,7 @@ Notre serveur est basé sur le protocole PICROM, intitulé par concaténation de
 \subsection{Documentation}
 Le serveur peut-être lancé depuis le shell IDLE ou sur un terminal linux avec
 la commande : \emph{python3 server.py}
+\\ou \emph{python3 server.py port} , sinon le port par défaut est 1459
 \\
 
 \noindent{\textbf{\underline{Protocole Client -> Serveur :}}}
@@ -237,6 +238,7 @@ associe les sockets aux pseudos.
 \subsection{Documentation}
 Le serveur peut-être lancé UNIQUEMENT depuis un terminal linux avec
 la commande : \emph{python3 client.py}
+\\ou \emph{python3 client.py IP port} , sinon l'IP par défaut est localhost et le port 1459
 \\\ding{88} : Nécessite les droits administrateurs
 \\\noindent{\textbf{Commandes disponibles:}}
 \begin{description}
