--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -111,7 +111,7 @@ la commande : \emph{python3 server.py}
     \item[---SEND <nick> <file\_name>] \ding{108} demande d'envoi de fichier au serveur, à destination de nick
     \item[---SENDF <package> | void ] \ding{108} envoi d'une partie du fichier | SENDF seul pour indiquer la fin de la transmission
     \item[---RECV] \ding{108} demande de réception d'un fichier qui nous est destiné.
-    \item[---RECVF] \ding{108} demande du paquet suivant
+    \item[---RECVF] \ding{108} paquet bien reçu, demande du paquet suivant
     \\
 \end{description}
 
