--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -11,8 +11,7 @@
 \usepackage{graphicx}
 
 \title{Projet réseau - Chat Python}
-\author{Loïc Lachiver}
-\author{Romain Pigret-Cadou}
+\author{Loïc Lachiver \and Romain Pigret-Cadou}
 
 \begin{document}
 \maketitle
@@ -363,8 +362,17 @@ Nous avons donc synchronisé le serveur avec le client à 1024 bits de longueur 
 
 \section{Conclusion}
 
+\emph{"lalalalalalala"}
+\begin{flushright}
+    Loïc Lachiver
+\end{flushright}
 
 
+
+\emph{"lalalalalalala"}
+\begin{flushright}
+    Romain Pigret-Cadou
+\end{flushright}
 
 \section{Annexes}
 \textbf{\noindent{\underline{Cahier des charges:}}}
