Do my conclusion

--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -369,7 +369,11 @@ Nous avons donc synchronisé le serveur avec le client à 1024 bits de longueur 
 
 
 
-\emph{"lalalalalalala"}
+\emph{"Mon avis personnel sur le projet réseau est qu'il était intéressant à coder
+mais très limité à la manipulation des sockets et des chaînes de caractères. Le projet est extrêmement chronophage, m'efforçant de commit régulièrement et après
+de nombreux tests j'ai passé plus de temps à taper des commandes serveur qu'autre chose, le côté interprété ne facilite pas les choses. Finalement nous avons réussi à nous transmettre des
+fichiers depuis des PC distants et le serveur est très fonctionnel. Par ailleurs les tests automatiques et le cahier
+des charges parfois trop précis et pas très intuitif étaient très contraignants, pour s'y conformer nous avons parfois sacrifié l'efficacité et la propreté du code."}
 \begin{flushright}
     Romain Pigret-Cadou
 \end{flushright}
